--- a/FutrueHybrid/build.gradle
+++ b/FutrueHybrid/build.gradle
@@ -1,9 +1,8 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.zzx.futrue.futrueclient"
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
