add RecyclerView and ConstraintsLayout

--- a/FutrueHybrid/src/main/AndroidManifest.xml
+++ b/FutrueHybrid/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.zzx.futrue">
 
     <application
+        android:name="com.zzx.futrue.FutrueApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -19,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ConstraintLayoutActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
